<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3A1A1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/main_editText_name"
        android:layout_width="233dp"
        android:layout_height="95dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="185dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_enterScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="32dp"
        android:text="@string/score_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:text="@string/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_editText_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_textView_data"
        android:layout_width="276dp"
        android:layout_height="309dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="148dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/main_editText_score"
        android:layout_width="226dp"
        android:layout_height="110dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="@string/score_hint"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/main_textView_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_editText_name"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/main_button_advanceToNxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="63dp"
        android:text="@string/advance_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>