<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editScores_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3A1A1"
    tools:context=".EditScores">

    <EditText
        android:id="@+id/editScores_editText_id"
        android:layout_width="247dp"
        android:layout_height="83dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/advance_id"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editScores_editText_score"
        android:layout_width="229dp"
        android:layout_height="93dp"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="384dp"
        android:ems="10"
        android:hint="@string/advance_score"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editScores_textView_data"
        android:layout_width="200dp"
        android:layout_height="259dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="64dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editScores_button_add"
        android:layout_width="144dp"
        android:layout_height="75dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="135dp"
        android:text="@string/score_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>